--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,14 +20,20 @@ spring:
           uri: lb://USER-SERVICE
           predicates:
             - Path=/api/v1/auth/**, /api/v1/users/**
+          filters:
+                - AuthenticationFilter
 
         - id: account-service
           uri: lb://ACCOUNT-SERVICE
           predicates:
             - Path=/api/v1/accounts/**
+          filters:
+                - AuthenticationFilter
 
         - id: transaction-service
           uri: lb://TRANSACTIONS-SERVICE
           predicates:
             - Path=/transaction/**
+          filters:
+            - AuthenticationFilter
 
